<resources>
    <string name="app_name">app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_user_center">用户中心</string>
    <string name="action_recharge">充值</string>
    <string name="action_transfer_accounts">转账</string>
    <string name="action_record">记录</string>
    <string name="action_set">安全设置</string>
    <string name="action_about">关于</string>
    <string name="action_phone_number">18****5792</string>
    <string name="title_activity_login">Sign in</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="back_login">返回登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="account">请输入手机号</string>
    <string name="pwd">请输入密码</string>
    <string name="pin">请输入验证码</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_rigister">RigisterActivity</string>

    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="network_error">“网络异常,请检查网络”</string>
    <string name="create_sqlite_file_error">"创建数据库文件失败"</string>
    <string name="db_insert_data_error">"数据写入失败"</string>
    <string name="db_select_data_error">"查询数据失败"</string>
    <string name="db_update_data_error">"更新数据失败"</string>
    <string name="db_delete_data_error">"删除数据失败"</string>
</resources>
