<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
<include layout="@layout/head"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:layout_marginLeft="@dimen/x28"
            android:layout_marginRight="@dimen/x28"
            android:background="@drawable/input_login">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x5"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon_account"/>

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/x40"
                android:background="@null"
                android:hint="@string/account"
                android:inputType="text"

                android:singleLine="true"
                android:textColor="@color/base_color_bbb"
                android:textSize="@dimen/x20"
                tools:text=""/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:layout_marginLeft="@dimen/x28"
            android:layout_marginRight="@dimen/x28"
            android:layout_marginTop="@dimen/x30"
            android:background="@drawable/input_login">

            <ImageView
                android:id="@+id/imageView_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x5"
                android:scaleType="centerCrop"
                android:src="@mipmap/icon_password"/>

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/imageView_pin"
                android:layout_toLeftOf="@+id/tv_pin"
                android:background="@null"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/base_color_bbb"
                android:textSize="@dimen/x20"
                tools:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:text="获取验证码"
                android:gravity="center"
                android:id="@+id/tv_pin"
                android:textSize="@dimen/x15"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginRight="@dimen/x4"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:paddingLeft="@dimen/x28"
            android:paddingRight="@dimen/x28">

            <TextView
                android:id="@+id/btn_rigister_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/forget_pwd"
                android:textColor="@color/base_color_999"
                android:visibility="invisible"
                android:textSize="@dimen/x20"/>

            <TextView
                android:id="@+id/btn_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:checked="false"
                android:paddingLeft="@dimen/x10"
                android:gravity="center"
                android:text="@string/forget_pwd"
                android:textColor="@color/base_color_999"
                android:textSize="@dimen/x20"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20"
            android:paddingLeft="@dimen/x28"
            android:paddingRight="@dimen/x28">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:background="@drawable/login_btn_bg"
                android:clickable="true"
                android:enabled="false"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/x20"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20"
            android:paddingLeft="@dimen/x28"
            android:paddingRight="@dimen/x28">

            <Button
                android:id="@+id/btn_rigister"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:background="@drawable/login_btn_bg"
                android:clickable="true"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/x20"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20"
            android:paddingLeft="@dimen/x28"
            android:paddingRight="@dimen/x28">

            <Button
                android:id="@+id/btn_back_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:background="@drawable/login_btn_bg"
                android:clickable="true"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/back_login"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="@dimen/x20"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x30"
        android:gravity="center"
        android:text="v1.0.0"
        android:textColor="@color/base_color_999"
        android:textSize="@dimen/x20"/>
</LinearLayout>